Attemping to fix location of logo on smaller screens

--- a/_navbar-landscape.scss
+++ b/_navbar-landscape.scss
@@ -6,8 +6,7 @@ nav {
     height: 80px;
     background-color: rgba(51, 51, 51, 0.8);
     .profile {
-        top: 100px;
-        left: 3%;
+        display: none;
     }
     .logo {
         left: calc(100vw - 70px);
