--- a/_navbar-portrait.scss
+++ b/_navbar-portrait.scss
@@ -39,13 +39,13 @@ nav {
         border: 2px solid #00ada5;
         border-radius: 50%;
         position: absolute;
-        top: 25%;
+        top: 15%;
         left: 65px;
         
     }
     .links {
         position: absolute;
-        top: 50%;
+        top: 45%;
         left: 80px;
         white-space: nowrap;
         text-align: center;
